--- a/style.css
+++ b/style.css
@@ -1,3 +1,15 @@
-*{
+/* *{
     background-color: linen;
+} */
+body{
+    background-color: linen!important;
+}
+
+.card_container{
+    display: flex;
+    justify-content: center ;
+}
+
+.card {
+    width: 55%;
 }
